[gd_scene load_steps=4 format=3 uid="uid://dt0aedpf6tsv3"]

[ext_resource type="Script" path="res://victory_screen.gd" id="1_wow0e"]
[ext_resource type="AudioStream" uid="uid://dlrop450oc027" path="res://Assets/Sound/buttonpress.wav" id="2_cdojn"]
[ext_resource type="AudioStream" uid="uid://d20tifx6d0g1c" path="res://Assets/Music/ChillMusic.wav" id="3_xooe5"]

[node name="VictoryScreen" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wow0e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "You Win!"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(104, 16)
layout_mode = 2
text = "Return to Main Menu"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cdojn")
volume_db = -5.0
bus = &"SFX"

[node name="VictoryMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xooe5")
volume_db = -12.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
